Migrate getPriceInServices từ mono sang product-catalog-service/product-policy-service
- ProductOfferPriceService.getPriceInServices: viết lại theo đúng logic
  legacy (ProductOfferPriceServiceImpl.java:320-408), ánh xạ line-by-line
  (xem plan). Thêm applyCamEquipmentPrice/applyNormalEquipmentPrice/
  applyPriceEquipmentToAll để xử lý ProductOfferPriceResponse là record
  immutable.
- product-policy-service: thêm backend mới cho 2 lời gọi cross-service
  trước đó trỏ vào endpoint không tồn tại:
  + MappingController: GET /v1/mapping/getMappingReasonProductOfferPrice/{id}
  + Feature mới freecamequipment: GET /v1/free-cam-equipment/checkReasonFreeCam/{id}
    (entity/repo/service/controller), kèm DDL bảng FREE_CAM_EQUIPMENT
    (db-local/init/01_schema.sql).
- Fix FreeCamEquipmentClientImpl: bug double-prefix path
  (/product-policy-service/v1/... lặp 2 lần) + đồng bộ throw
  IntegrationException thay vì nuốt lỗi (giống MappingClientImpl).
- Fix OptionSetValueService.findOneByCodeAndValue: thêm so sánh UPPER() +
  lấy dòng đầu thay vì Optional (tránh throw khi trùng giá trị), khớp
  behavior legacy.
- Fix ProductSpecCharValueService.getByProductSpecCharCodeAndProductOfferingId:
  thêm check effect_datetime/expire_datetime còn thiếu so với legacy.
- Đăng ký error code BCCS-CATALOG-PRICE-0001.

Verify: mvn test (LayeredArchitectureTest) pass cả 2 service; test end-to-end
qua DB local xác nhận nhánh CAM equipment chọn đúng giá indoor/outdoor.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>